Fixed item deselection when clicking on scrollbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -21,6 +21,11 @@
         flex: auto;
         overflow-y: auto;
     }
+
+    .tableContainer {
+        outline: none;
+        min-height: 100%;
+    }
     
     .scrollMargin {
         padding: 0;
